Add resume viewer and notepad app

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
       <i class="fa-solid fa-user"></i>
       <span>Profile</span>
     </button>
+    <button class="dock-item" data-window="notepad" aria-label="Notepad">
+      <i class="fa-solid fa-note-sticky"></i>
+      <span>Notepad</span>
+    </button>
     <button class="dock-item" data-window="about-desktop" aria-label="About This Desktop">
       <i class="fa-solid fa-circle-info"></i>
       <span>About</span>
@@ -86,6 +90,8 @@
   <section class="window terminal-window" data-window-id="terminal" data-window-src="windows/terminal.html" style="left: 122px; top: 80px;"></section>
   <section class="window gui-window" data-window-id="gui" data-window-src="windows/profile.html" style="left: 172px; top: 150px; width: 900px; height: 600px; display: none;"></section>
   <section class="window about-window" data-window-id="about-desktop" data-window-src="windows/about-desktop.html" style="left: 232px; top: 220px; width: 560px; height: 620px; display: none;"></section>
+  <section class="window resume-window" data-window-id="resume" data-window-src="windows/resume.html" style="left: 200px; top: 140px; width: 720px; height: 520px; display: none;"></section>
+  <section class="window notepad-window" data-window-id="notepad" data-window-src="windows/notepad.html" style="left: 260px; top: 160px; width: 520px; height: 420px; display: none;"></section>
   <section class="window alert-window" data-window-id="alert" data-window-src="windows/alert.html" style="left: 160px; top: 120px; width: 420px; height: 240px; display: none;"></section>
 </main>
 </body>
